--- a/config/ui-lovelace.yaml
+++ b/config/ui-lovelace.yaml
@@ -1,5 +1,5 @@
 resources:
-  - url: /local/simple-custom:simple-thermostat.min.js?v=1
+  - url: /local/simple-custom:simple-thermostatt.min.js?v=1
     type: module
 views:
     # View tab title.
@@ -7,15 +7,15 @@ views:
     cards:
       - type: vertical-stack
         cards:
-        - type: custom:simple-thermosta
+        - type: custom:simple-thermostat
           entity: climate.t_wohnzimmer
-        - type: custom:simple-thermosta
+        - type: custom:simple-thermostat
           entity: climate.t_schlafzimmer
       - type: vertical-stack
         cards:
-        - type: custom:simple-thermosta
+        - type: custom:simple-thermostat
           entity: climate.t_bad
-        - type: custom:simple-thermosta
+        - type: custom:simple-thermostat
           entity: climate.t_kueche
       - type: vertical-stack
         cards:
@@ -67,7 +67,7 @@ views:
           - switch.xbox
           - switch.switch
           - switch.chromecast
-      - type: custom:simple-thermosta
+      - type: custom:simple-thermostat
         entity: climate.t_wohnzimmer
       - type: vertical-stack
         cards:
@@ -89,7 +89,7 @@ views:
         entity:  light.schlafzimmer_licht
       - type: media-control
         entity: media_player.schlafzimmer
-      - type: custom:simple-thermosta
+      - type: custom:simple-thermostat
         entity: climate.t_schlafzimmer
       - type: entities
         entities:
@@ -113,7 +113,7 @@ views:
     cards:
       - type: light
         entity:  light.kuche_licht
-      - type: custom:simple-thermosta
+      - type: custom:simple-thermostat
         entity: climate.t_kueche
       - type: entities
         entities:
@@ -125,7 +125,7 @@ views:
           - sensor.luftdruck_kueche
   - title: Bad
     cards:
-      - type: custom:simple-thermosta
+      - type: custom:simple-thermostat
         entity: climate.t_bad
       - type: entities
         entities:
