--- a/config/ui-lovelace.yaml
+++ b/config/ui-lovelace.yaml
@@ -1,5 +1,5 @@
 resources:
-  - url: /local/simple-custom:simple-thermostat.min.js?v=1
+  - url: /local/simple-thermostat.js?v=1
     type: module
 views:
     # View tab title.
