--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -212,5 +212,7 @@ googlehome:
   devices:
     - host: 192.168.200.104
       track_alarms: true
+      device_types: [1,3]
     - host: 192.168.200.107
       track_alarms: true
+      device_types: [1,3]
